added pictures, links to two pages, added css page, added a second page to the website

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <a href="https://arcade.makecode.com/S85832-07505-94274-97087">
         Michael's Malware
     </a>
+    <div></div>
+    <img src="/images/Michael'smalware.png" alt="" width="400" height="200"> 
+    <div></div>
+    <a href="/html/page2.html">
+        forward
+    </a>
 </body>
 </html>
