added customizers to links so it looks good, added a new image Pie Clicker, added Pie Clicker,

--- a/html/page2.html
+++ b/html/page2.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
 </head>
+<link rel="stylesheet" href="/css/styles.css">
 <body>
-    <a href="/index.html">
+    <h1>Title</h1>
+
+    <a class="move" href="/index.html">
         back
     </a>
-    <h1>Title</h1>
 </body>
 </html>
