--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <h1>
-        word
+        hruger Portfolio
     </h1>
-    <a href="https://arcade.makecode.com/S85832-07505-94274-97087">
+    <a class="link" href="https://arcade.makecode.com/S85832-07505-94274-97087">
         Michael's Malware
     </a>
     <div></div>
-    <img src="/images/Michael'smalware.png" alt="" width="400" height="200"> 
+    <img src="/images/Michael'smalware.png" alt="" width="300" height="150"> 
     <div></div>
-    <a href="/html/page2.html">
-        forward
+    <a class="link" href="https://github.com/hruger05/Pie-Clicker">
+        Pie Clicker
+    </a>
+    <div></div>
+    <img src="/images/Pie Clicker.png" alt="" width="150" height="300">
+    <div></div>
+    <a class="move" href="/html/page2.html">
+        Next page
     </a>
 </body>
 </html>
