Added titles, more images, new projects

--- a/index.html
+++ b/index.html
@@ -10,20 +10,40 @@
     <h1>
         hruger Portfolio
     </h1>
+
+    <div><p>Michael's Malware</p></div>
+
     <a class="link" href="https://arcade.makecode.com/S85832-07505-94274-97087">
-        Michael's Malware
+        <img src="/images/Michael'smalware.png" alt="" width="300" height="150">
     </a>
-    <div></div>
-    <img src="/images/Michael'smalware.png" alt="" width="300" height="150"> 
-    <div></div>
-    <a class="link" href="https://github.com/hruger05/Pie-Clicker">
+
+    <div><p>
         Pie Clicker
-    </a>
-    <div></div>
-    <img src="/images/Pie Clicker.png" alt="" width="150" height="300">
-    <div></div>
-    <a class="move" href="/html/page2.html">
+    </p></div>
+    <div><a class="link" href="https://github.com/hruger05/Pie-Clicker">
+        <img src="/images/Pie.png" alt="" width="50" height="50">
+    </a><div>
+
+    <div><p>Dice game</p></div>
+
+    <div><a href="https://github.com/hruger05/Dice-game">
+        <img src="/images/dice.png" alt="" width="50" height="50">
+    </a></div>
+
+    <div><p>Wordle</p></div>
+
+    <div><a class="link" href="https://github.com/hruger05/Wordle">
+        <img src="/images/wordle.png" alt="" width="50" height="50">
+    </a></div>
+
+    <div><p>Quadratic Calculator</p></div>
+
+    <div><a class="link" href="https://github.com/hruger05/Quadratic-Calculator">
+        Quadratic Calculator
+    </a></div>
+
+    <div><a class="move" href="/html/page2.html">
         Next page
-    </a>
+    </a></div>
 </body>
 </html>
