--- a/index.html
+++ b/index.html
@@ -5,45 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Projects
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/html/Michael'sMalware.html">Michael's Malware</a></li>
+                  <li><a class="dropdown-item" href="/html/PieClicker.html">Pie Clicker</a></li>
+                  <li><a class="dropdown-item" href="/html/DiceGame.html">Dice Game</a></li>
+                  <li><a class="dropdown-item" href="/html/Wordle.html"> Wordle</a></li>
+                  <li><a class="dropdown-item" href="/html/QuadraticCalc.html">Quadratic Calculator</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <h1>
         hruger Portfolio
     </h1>
-
-    <div><p>Michael's Malware</p></div>
-
-    <a class="link" href="https://arcade.makecode.com/S85832-07505-94274-97087">
-        <img src="/images/Michael'smalware.png" alt="" width="300" height="150">
-    </a>
-
-    <div><p>
-        Pie Clicker
-    </p></div>
-    <div><a class="link" href="https://github.com/hruger05/Pie-Clicker">
-        <img src="/images/Pie.png" alt="" width="50" height="50">
-    </a><div>
-
-    <div><p>Dice game</p></div>
-
-    <div><a href="https://github.com/hruger05/Dice-game">
-        <img src="/images/dice.png" alt="" width="50" height="50">
-    </a></div>
-
-    <div><p>Wordle</p></div>
-
-    <div><a class="link" href="https://github.com/hruger05/Wordle">
-        <img src="/images/wordle.png" alt="" width="50" height="50">
-    </a></div>
-
-    <div><p>Quadratic Calculator</p></div>
-
-    <div><a class="link" href="https://github.com/hruger05/Quadratic-Calculator">
-        Quadratic Calculator
-    </a></div>
-
-    <div><a class="move" href="/html/page2.html">
-        Next page
-    </a></div>
+    <div><p>My name is Hudson Ruger and I enjoy playing sports and coding, I have 2  siblings, a dog, and 3 cats</p></div>
 </body>
 </html>
